--- a/PSS/Pages/Test.razor
+++ b/PSS/Pages/Test.razor
@@ -3,33 +3,13 @@
 
 <title>Test</title>
 @{
-    //inserting base64 image into thumbnail
-    // var yes = File.ReadAllBytes("C:/Users/Elliott/Documents/GitHub/Photos-Storage-Server/PSS/wwwroot/pss_upload/output_image.jpg");
-    // var base64 = Convert.ToBase64String(yes);
-    // C.Open();
-    // NpgsqlCommand cmd = new("INSERT INTO media (path, date_taken, date_added, starred, separate, thumbnail) VALUES (1, now(), now(), false, false, @base64)", C.connection);
-    // cmd.Parameters.AddWithValue("@base64", base64);
-    // cmd.ExecuteNonQuery();
-    // C.Close();
-    
-    //works perfectly getting base64 string from column
-    // C.Open();
-    // NpgsqlCommand cmd2 = new("SELECT thumbnail FROM media", C.connection);
-    // NpgsqlDataReader reader = cmd2.ExecuteReader();
-    // reader.Read();
-    // var fromDB = reader.GetString(0);
-    //<img alt="mmmmmm" src=@("data:image/jpg;base64," + fromDB)>
-    // C.Close();
-    
-    <img style="width: 10%; margin-left: 40%;" src=@("data:image/jpg;base64," + yes) alt="hi"/>;
-    <img style="width: 10%; margin-left: 10%;" src=@("data:image/jpg;base64," + yes2) alt="hi"/>;
-    <img style="width: 10%; margin-left: 10%;" src=@("data:image/jpg;base64," + yes3) alt="hi"/>;
+    //Metadata.DateTakenSrc yes = new();
+    //Metadata.GetFilenameTimestamp("Screenshot 2021-11-16 213028 - Copy.jpg", out DateTime dateTaken, ref yes);
+    //Console.WriteLine(dateTaken);
 }
 
 @code{
 
-    private static readonly string yes = UploadApply.GenerateThumbnail("C:/Users/Elliott/Documents/GitHub/Photos-Storage-Server/PSS/wwwroot/pss_upload/VID_20220108_122130.mp4");
-    private static readonly string yes2 = UploadApply.GenerateThumbnail("C:/Users/Elliott/Documents/GitHub/Photos-Storage-Server/PSS/wwwroot/pss_upload/VID_20211230_075610.mp4");
-    private static readonly string yes3 = UploadApply.GenerateThumbnail("C:/Users/Elliott/Documents/GitHub/Photos-Storage-Server/PSS/wwwroot/pss_upload/VID_20211230_092341.mp4");
+    
 
 }
