--- a/PSS/Pages/Index.razor
+++ b/PSS/Pages/Index.razor
@@ -35,7 +35,7 @@
             {
                 <div class="thumbnail">
                     @if (media.starred) {<span class="material-icons-outlined star-icon">star</span>}
-                    @* @if (media.thumbnail != null) {<span class="material-icons-outlined video-icon">star</span>}  TODO: add icon thing in to right for if video like gphotos has. Probs gonna need a css class.*@
+                    @if (media.thumbnail != null) {<span class="material-icons-outlined video-icon">play_circle_outline</span>}
                     <span @onclick="@(() => ToggleCheck(media.path))" id="@media.path" class="material-icons checkbox unchecked">check_circle</span>
                     <img @onclick="@(() => ImgClicked(media.uuid.ToString(), media.path))" src="@S.requestPath/@media.path" alt="@S.requestPath/@media.path" loading="lazy"/> @*todo this too. When click thumbnail needs to take you to view item with the video as the url param*@
                 </div>
