--- a/PSS/wwwroot/css/IndexAndStarred.css
+++ b/PSS/wwwroot/css/IndexAndStarred.css
@@ -70,6 +70,12 @@ h1 {
     bottom: 10px;
 }
 
+#mainDiv > .thumbnail > .video-icon {
+    position: absolute;
+    right: 8px;
+    top: 10px;
+}
+
 #mainDiv > .thumbnail > .checkbox {
     opacity: 0;
     position: absolute;
