--- a/PSS/Pages/Starred.razor
+++ b/PSS/Pages/Starred.razor
@@ -33,9 +33,17 @@
             @foreach (C.MediaRow media in starredList)
             {
                 <div class="thumbnail">
-                    @if (media.starred) {<span class="material-icons-outlined star-icon">star</span>}
+                    <span class="material-icons-outlined star-icon">star</span>
                     <span @onclick="@(() => ToggleCheck(media.path))" id="@media.path" class="material-icons checkbox unchecked">check_circle</span>
-                    <img @onclick="@(() => ImgClicked(media.uuid.ToString(), media.path))" src="@S.requestPath/@media.path" alt="@S.requestPath/@media.path" loading="lazy"/>
+                    @if (media.thumbnail != null) //Video
+                    {
+                        <span class="material-icons-outlined video-icon">play_circle_outline</span>
+                        <img @onclick="@(() => ImgClicked(media.uuid.ToString(), media.path))" src="data:image/jpg;base64,@media.thumbnail" alt="@S.requestPath/@media.path" loading="lazy"/>
+                    }
+                    else
+                    {
+                        <img @onclick="@(() => ImgClicked(media.uuid.ToString(), media.path))" src="@S.requestPath/@media.path" alt="@S.requestPath/@media.path" loading="lazy"/>
+                    }
                 </div>
             }
         </div>
