AV can display thumbnails of videos

--- a/PSS/wwwroot/css/AlbumView.css
+++ b/PSS/wwwroot/css/AlbumView.css
@@ -120,6 +120,12 @@ header > #albumRenameDiv {
     bottom: 10px;
 }
 
+#mainDiv > .thumbnail > .video-icon {
+    position: absolute;
+    right: 8px;
+    top: 10px;
+}
+
 #mainDiv > .thumbnail > .checkbox {
     opacity: 0;
     position: absolute;
