--- a/PSS/Shared/ViewItem.razor
+++ b/PSS/Shared/ViewItem.razor
@@ -107,9 +107,16 @@ Required Parameters:
                 <svg width="36px" height="36px" viewBox="0 0 24 24"><path d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"></path></svg>
             </div>
         }
+
+        if (MediaList[index].thumbnail == null)
+        {
+            <div @onkeydown="@ChangeImage" tabindex="0" id="imgDiv"><img onload="document.getElementById('imgDiv').focus()" id="@path" src="@S.requestPath/@path" alt=""/></div>
+        }
+        else
+        {
+            <div @onkeydown="@ChangeImage" tabindex="0" id="imgDiv"><video onload="document.getElementById('imgDiv').focus()" id="@path" src="@S.requestPath/@path" alt="" controls autoplay></video></div>
+        }
         
-        <div @onkeydown="@ChangeImage" tabindex="0" id="imgDiv"><img onload="document.getElementById('imgDiv').focus()" id="@path" src="@S.requestPath/@path" alt=""/></div>
-                                                                                                                           
         if (index + 1 < MediaList.Count)
         {
             <div onclick="location.href='/@Page/@MediaList[index + 1].uuid'" class="sideBtn" id="rightBtn">
