--- a/PSS/Pages/ViewStarredItem.razor
+++ b/PSS/Pages/ViewStarredItem.razor
@@ -3,7 +3,7 @@
 @layout EmptyLayout
 
 @{
-    <ViewItem id="@id" MediaList="@starredList" Page="view-starred-item" ReturnPath="starred" DateAdded="@C.GetDateAdded(Guid.Parse(id))"/>
+    <ViewItem id="@id" MediaList="@starredList" Page="view-starred-item" ReturnPath="starred" DateAdded="@C.GetDateAdded(Guid.Parse(id))" IsAlbum="@false"/>
 }
 
 @code {
