--- a/PSS/Pages/UploadApply.razor
+++ b/PSS/Pages/UploadApply.razor
@@ -1,5 +1,4 @@
 @page "/apply-upload"
-@using System.Diagnostics
 
 <title>Apply Upload</title>
 <link href="css/UploadApply.css" rel="stylesheet">
@@ -119,7 +118,7 @@
             {
                 fullPath = path,
                 shortPath = null,
-                thumbnail = path.Contains(".mp4") || path.Contains(".mkv") ? GenerateThumbnail(path) : null
+                thumbnail = path.Contains(".mp4") || path.Contains(".mkv") ? F.GenerateThumbnail(path) : null
             };
             (file.dataPresent, file.dateTakenSrc) = Metadata.GetDateTaken(path, out file.dateTaken);
             file.alreadyInLib = ItemExists(Path.GetFileName(path), file.dateTaken);
@@ -213,36 +212,4 @@
     
     //Get if an item is already on the server (already in your library).
     private static bool ItemExists(string filename, DateTime dateTaken) => File.Exists(Path.Combine(GenerateSortedDir(dateTaken), Path.GetFileName(filename)));
-
-    ///<summary>
-    ///Given the full final path where the video file will end up on the server, generate a temporary compressed thumbnail file for it,
-    ///turn that into its base64 representation, and return the base64 string.<br/>
-    ///Make sure to clear the pss_tmp directory when done in UploadApply!
-    ///</summary>
-    ///<param name="videoFullFinalPath">The full path to where the video file either is right now, or where it will be.</param>
-    public static string GenerateThumbnail(string videoFullFinalPath)
-    {
-        //First create the thumbnail from the first frame of the video file.
-        //https://stackoverflow.com/questions/4425413/how-to-extract-the-1st-frame-and-restore-as-an-image-with-ffmpeg/4425466
-        //Store this file in the tmp folder and name it as the same name as the video file except with the extension '.tmp.jpg'.
-        string thumbnailFullPath = Path.Combine(S.tmpFolderPath, $"{Path.GetFileNameWithoutExtension(videoFullFinalPath)}_thumbnail_{DateTime.Now:M-d-yyyy}.tmp.jpg");
-
-        if (!File.Exists(thumbnailFullPath)) //Re-use it if it exists from a previous run of this command.
-        {
-            //Something to note is this command produces a bunch of stupid output and also says it failed but it still produces the thumbnail so... ¯\_(ツ)_/¯ 
-            ProcessStartInfo ffmpegInfo = new()
-            {
-                CreateNoWindow = true,
-                FileName = "ffmpeg",
-                Arguments = $"-i \"{videoFullFinalPath}\" -vf \"select=eq(n\\,0)\" -vf scale=320:-2 -q:v 25 \"{thumbnailFullPath}\""
-            };
-            Process ffmpegProcess = Process.Start(ffmpegInfo);
-            ffmpegProcess!.WaitForExit();
-        }
-
-        byte[] bytes = File.ReadAllBytes(thumbnailFullPath);
-
-        //Then convert that file's bytes into its base64 equivalent. This is stored in the DB as the thumbnail (no actual file required).
-        return Convert.ToBase64String(bytes);
-    }
 }
